--- a/components/ui/minimal-tiptap/styles/index.css
+++ b/components/ui/minimal-tiptap/styles/index.css
@@ -1,9 +1,12 @@
+@reference "../../../../app/globals.css";
+
 @import "./partials/code.css";
 @import "./partials/placeholder.css";
 @import "./partials/lists.css";
 @import "./partials/typography.css";
 @import "./partials/zoom.css";
-@reference "../../../global.css";
+
+
 
 :root {
   --mt-overlay: rgba(251, 251, 251, 0.75);
